--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -22,6 +22,9 @@
     border: none;
     font-size: 18px;
     padding-left: 22px;
+    @media (max-width: 599px) {
+      padding-left: 10px;
+    }
   }
   &__bar-btn {
     position: absolute;
@@ -41,10 +44,16 @@
   }
   &__btn {
     @include btnType1;
+    @media (max-width: 599px) {
+      width: 100%;
+    }
   }
   &__group {
     position: relative;
     margin-top: 20px;
+    @media (max-width: 599px) {
+      width: 100%;
+    }
   }
 }
 .btn1 {
@@ -90,8 +99,14 @@
       font-size: 18px;
       font-weight: 700;
       min-width: 50px;
+      @media (max-width: 599px) {
+        font-size: 16px;
+      }
       & > i {
         font-size: 20px;
+        @media (max-width: 599px) {
+          font-size: 18px;
+        }
       }
     }
     &__ingredients {
@@ -127,6 +142,11 @@
   top: -11px;
   padding: 10px;
   display: none;
+  @media (max-width: 599px) {
+    padding: 0;
+    left: 0;
+    top: 0;
+  }
 
   ul {
     display: grid;
@@ -135,6 +155,10 @@
     flex-flow: row wrap;
     border-radius: 5px;
     position: relative;
+    @media (max-width: 599px) {
+      width: 88vw;
+      grid-template-columns: repeat(2, 1fr);
+    }
   }
 
   li {
@@ -170,6 +194,10 @@
       color: #fff;
       line-height: 1.2;
       opacity: 0.5;
+    }
+    @media (max-width: 599px) {
+      grid-column: 1 / span 2;
+      font-size: 16px;
     }
   }
 }
