--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -44,14 +44,14 @@
   }
   &__btn {
     @include btnType1;
-    @media (max-width: 599px) {
+    @media (max-width: 768px) {
       width: 100%;
     }
   }
   &__group {
     position: relative;
     margin-top: 20px;
-    @media (max-width: 599px) {
+    @media (max-width: 768px) {
       width: 100%;
     }
   }
@@ -72,16 +72,26 @@
 .recipes {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
-  row-gap: 20px;
+  //justify-content: space-around;
+  //row-gap: 20px;
+  gap: 20px;
 }
 
 .recipe {
   height: auto;
-  width: 380px;
+  width: 24%;
   background-color: $color-lightGrey;
   border-radius: 5px;
   overflow: hidden;
+  @media (max-width: 1700px) {
+    width: 32.1%;
+  }
+  @media (max-width: 1260px) {
+    width: 48%;
+  }
+  @media (max-width: 768px) {
+    width: 100%;
+  }
   &-img {
     height: 178px;
     background-color: $color-img;
@@ -155,7 +165,7 @@
     flex-flow: row wrap;
     border-radius: 5px;
     position: relative;
-    @media (max-width: 599px) {
+    @media (max-width: 768px) {
       width: 86vw;
       grid-template-columns: repeat(2, 1fr);
     }
