--- a/public/css/style.css
+++ b/public/css/style.css
@@ -114,7 +114,7 @@ p {
   display: flex;
   justify-content: space-between;
 }
-@media (max-width: 599px) {
+@media (max-width: 768px) {
   .search__btn {
     width: 100%;
   }
@@ -123,7 +123,7 @@ p {
   position: relative;
   margin-top: 20px;
 }
-@media (max-width: 599px) {
+@media (max-width: 768px) {
   .search__group {
     width: 100%;
   }
@@ -150,16 +150,30 @@ p {
 .recipes {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
-  row-gap: 20px;
+  gap: 20px;
 }
 
 .recipe {
   height: auto;
-  width: 380px;
+  width: 24%;
   background-color: #e7e7e7;
   border-radius: 5px;
   overflow: hidden;
+}
+@media (max-width: 1700px) {
+  .recipe {
+    width: 32.1%;
+  }
+}
+@media (max-width: 1260px) {
+  .recipe {
+    width: 48%;
+  }
+}
+@media (max-width: 768px) {
+  .recipe {
+    width: 100%;
+  }
 }
 .recipe-img {
   height: 178px;
@@ -241,7 +255,7 @@ p {
   border-radius: 5px;
   position: relative;
 }
-@media (max-width: 599px) {
+@media (max-width: 768px) {
   .filtersTags ul {
     width: 86vw;
     grid-template-columns: repeat(2, 1fr);
